<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Examen</string>
    <string name="action_settings">Settings</string>

    <!-- TITLE -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_activity_application">Home</string>

    <!-- LABELS -->
    <string name="name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="password_confirmation_label">Confirm Password</string>
    <string name="welcome_label">Welcome</string>
    <string name="task">Tasks</string>
    <string name="note">Notes</string>
    <string name="task_name_label">Name Task</string>
    <string name="task_description_label">Description Task</string>
        <string name="note_name_label">Name Note</string>
    <string name="note_description_label">Description Note</string>

    <!-- BUTTONS -->
    <string name="register_button_label">Register</string>
    <string name="login_button_label">Login</string>
    <string name="logout_button_label">Logout</string>
    <string name="profile_button_label">Profile</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="add_button_label">Add</string>
    <string name="save_button_label">Save</string>
    <string name="delete_button_label">Delete</string>
    <string name="Button_ir1">Ir</string>
    <string name="Button_ir2">Ir</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="btSeleccionar">Seleccionar</string>
    <string name="title_activity_my_app_contract">MyAppContract</string>
    <string name="title_activity_my_app_db_helper">MyAppDbHelper</string>
    <string name="title_activity_my_app_data_source">MyAppDataSource</string>
    <string name="title_activity_list_view_item_click_listener">ListViewItemClickListener</string>
    <string name="number">Rate your task from 0 to 9</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_notes">NotesActivity</string>

</resources>
