<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TasksActivity" >
    
     <EditText
        android:id="@+id/nameTask"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_name_label" />
     	
	<EditText
        android:id="@+id/descriptionTask"
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_description_label" />

	<DatePicker
	    android:id="@+id/dpDia"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    />
	    
	<Button 
	    android:id="@+id/btButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/btSeleccionar"
	    />

	
	<Button
	        android:id="@+id/saveButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="17dp"
	        android:text="@string/save_button_label"
	        android:onClick="onSaveButtonClicked" />
	 
	 <Button
	        android:id="@+id/deleteButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="17dp"
	        android:text="@string/delete_button_label"
	        android:visibility="invisible"
	        android:onClick="onDeleteButtonClicked" />
</LinearLayout>
