<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#E4E8F1"
    tools:context=".ApplicationActivity" >
    
	<TextView
	    android:id="@+id/nameTextViewField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
     
       <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/logout_button_label"
        android:onClick="onLogoutButtonClicked" />

       <Space
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
      
       <Space
           android:layout_width="match_parent"
           android:layout_height="40dip" />

           
           
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		<TextView
               android:id="@+id/taskView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/task"
               android:textAppearance="?android:attr/textAppearanceMedium" />

		<Button
		    android:id="@+id/buttonIr1"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/Button_ir1" 
		    android:onClick="onClickTask"/>

		</LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    
           <TextView
               android:id="@+id/noteView"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/note"
               android:textAppearance="?android:attr/textAppearanceMedium" />

           <Button
               android:id="@+id/buttonIr2"
               style="?android:attr/buttonStyleSmall"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/Button_ir2"
               android:onClick="onClickNote" />

		</LinearLayout>

       </LinearLayout>
       
       <Space
           android:layout_width="match_parent"
           android:layout_height="20dip" />

       <Button
           android:id="@+id/profileButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="17dp"
           android:onClick="onProfileButtonClicked"
           android:text="@string/profile_button_label" />

</LinearLayout>
